<resources>
    <string name="app_name">Hobbies</string>
    <string name="drawing">Drawing</string>
    <string name="black">Black</string>
    <string name="blackColor">#FF000000</string>
    <string name="blue">Blue</string>
    <string name="blueColor">#FF0000CC</string>
    <string name="green">Green</string>
    <string name="greenColor">#FF00AA00</string>
    <string name="red">Red</string>
    <string name="redColor">#FFEE0000</string>
</resources>