<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".DrawingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:onClick="uploadDrawing"
            android:text="Upload"></Button>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginVertical="8dp"
            android:layout_weight="1"
            android:text="@string/drawing"
            android:textSize="30dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:onClick="saveDrawing"
            android:text="Save"></Button>
    </LinearLayout>

    <co.tashawych.hobbies.DrawingCanvas
        android:id="@+id/drawingCanvas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/canvasBackground" />

    <LinearLayout
        android:id="@+id/paintColors"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/selected_button"
            android:onClick="setPaintColor"
            android:tag="@string/blackColor"
            android:text="@string/black" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:onClick="setPaintColor"
            android:tag="@string/blueColor"
            android:text="@string/blue" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:onClick="setPaintColor"
            android:tag="@string/greenColor"
            android:text="@string/green" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:onClick="setPaintColor"
            android:tag="@string/redColor"
            android:text="@string/red" />
    </LinearLayout>

</LinearLayout>